--- a/.github/workflows/build-nym-vpn-core-mac.yml
+++ b/.github/workflows/build-nym-vpn-core-mac.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, workflow_call]
 env:
   CARGO_TERM_COLOR: always
   CARGO_TARGET: release
-  WG_GO_LIB_PATH: ${{ github.workspace }}/lib
+  WG_GO_LIB_PATH: ${{ github.workspace }}/build/lib/universal-apple-darwin
   WG_GO_LIB_NAME: wireguard-go_apple_universal
   UPLOAD_DIR_MAC: mac_artifacts
 
