--- a/.github/workflows/build-nym-vpn-core-windows.yml
+++ b/.github/workflows/build-nym-vpn-core-windows.yml
@@ -11,7 +11,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   CARGO_TARGET: release
-  LIBS_PATH: '${{ github.workspace }}/lib'
+  LIBS_PATH: '${{ github.workspace }}/build/lib/x86_64-pc-windows-msvc'
   WG_GO_LIB_NAME: wireguard-go_x86_64-pc-windows-msvc
   MULLVAD_LIB_NAME: winfw
   UPLOAD_DIR_WINDOWS: windows_artifacts
