--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
     "crates/nym-vpnd",
+    "crates/nym-wg-go",
     "nym-vpn-cli",
     "nym-vpn-lib",
 ]
@@ -53,6 +54,7 @@ anyhow = "1.0.86"
 async-trait = "0.1.81"
 axum = { version = "0.7.5" }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
+base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
 bs58 = "0.5.1"
@@ -61,12 +63,14 @@ chrono = "0.4.38"
 clap = "4.5"
 dirs = "5.0.1"
 futures = "0.3.30"
+hex = "0.4"
 hickory-resolver = "0.24.1"
 http = "0.2.12"                                                     # version compatible with tonic
 ipnetwork = "0.16"
 itertools = "0.13.0"
 lazy_static = "1.5.0"
 log = "0.4.22"
+libc = "0.2"
 maplit = "1.0.2"
 netdev = "0.29.0"
 parity-tokio-ipc = "0.9.0"
@@ -99,7 +103,9 @@ tun2 = { version = "2.0.5", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
 vergen = { version = "8.3.1", default-features = false }
+x25519-dalek = "2.0"
 zeroize = "1.6.0"
+nix = "0.29"
 
 # Use the develop-pre-ecash-for-vpn branch until we have ported the vpn client to use ecash
 
