refactor nym lib

--- a/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
             android:foregroundServiceType="systemExempted"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:persistent="true"
-            android:stopWithTask="false" />
+            android:stopWithTask="false">
+			<intent-filter>
+				<action android:name="android.net.VpnService" />
+			</intent-filter>
+			<meta-data
+				android:name="android.net.VpnService.SUPPORTS_ALWAYS_ON"
+				android:value="true" />
+		</service>
     </application>
 </manifest>
