--- a/nym-vpn-android/app/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
+				<action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
 			</intent-filter>
 			<meta-data
 				android:name="android.app.shortcuts"
@@ -45,21 +46,9 @@
 			android:theme="@style/Theme.NymVPN"
 			android:screenOrientation="portrait"
 			android:windowSoftInputMode="adjustResize">
-			<intent-filter>
-				<action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
-			</intent-filter>
 			<intent-filter android:autoVerify="true">
 				<action android:name="android.intent.action.VIEW" />
-
 				<category android:name="android.intent.category.DEFAULT" />
-				<category android:name="android.intent.category.BROWSABLE" />
-
-				<data android:scheme="http" />
-				<data
-					android:host="10.0.1.91"
-					android:port="5500" />
-				<data android:mimeType="text/plain" />
-				<data android:path="/index.html" />
 			</intent-filter>
 		</activity>
 		<activity
@@ -110,21 +99,10 @@
 				<action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
 			</intent-filter>
 		</receiver>
-		<service
-			android:name=".service.android.AlwaysOnVpnService"
+		<receiver
+			android:name=".receiver.BackgroundActionReceiver"
 			android:enabled="true"
-			android:exported="false"
-			android:foregroundServiceType="systemExempted"
-			android:permission="android.permission.BIND_VPN_SERVICE"
-			android:persistent="true"
-			tools:node="merge">
-			<intent-filter>
-				<action android:name="android.net.VpnService" />
-			</intent-filter>
-			<meta-data
-				android:name="android.net.VpnService.SUPPORTS_ALWAYS_ON"
-				android:value="true" />
-		</service>
+			android:exported="false"/>
 		<!-- Sentry -->
 		<meta-data
 			android:name="io.sentry.auto-init"
