--- a/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
@@ -17,5 +17,9 @@ tokio = { workspace = true, features = ["sync"] }
 zeroize.workspace = true
 rand_chacha = "0.3.1"
 
+bip39 = "2.0"
+secp256k1 = "0.29"
+cosmrs = "0.18"
+
 [dev-dependencies]
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
