--- a/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
@@ -20,6 +20,8 @@ rand_chacha = "0.3.1"
 bip39 = "2.0"
 secp256k1 = "0.29"
 cosmrs = "0.18"
+hex = "0.4.3"
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
+bip39 = { version = "2.0", features = ["rand"] }
