--- a/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
@@ -21,6 +21,7 @@ bip39 = "2.0"
 secp256k1 = "0.29"
 cosmrs = "0.18"
 hex = "0.4.3"
+nym-validator-client.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
