--- a/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-store/Cargo.toml
@@ -9,19 +9,20 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+bip39 = "2.0"
+cosmrs = "0.18"
+hex = "0.4.3"
 nym-crypto = { workspace = true, features = ["rand", "symmetric", "asymmetric"] }
 nym-pemstore.workspace = true
+nym-validator-client.workspace = true
 rand.workspace = true
+rand_chacha = "0.3.1"
+secp256k1 = "0.29"
+serde_json.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, features = ["sync"] }
 zeroize.workspace = true
-rand_chacha = "0.3.1"
-
-bip39 = "2.0"
-secp256k1 = "0.29"
-cosmrs = "0.18"
-hex = "0.4.3"
-nym-validator-client.workspace = true
+serde = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
