--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -94,6 +94,7 @@ tonic-reflection = { version = "0.11.0", features = ["server"] }
 tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["cors"] }
 tracing = "0.1"
+tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tun2 = { version = "2.0.5", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
