--- a/nym-vpn-core/crates/nym-vpnd/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnd/Cargo.toml
@@ -32,7 +32,7 @@ tonic-health.workspace = true
 tonic-reflection.workspace = true
 tonic.workspace = true
 tower-http = { workspace = true, features = ["cors"] }
-tracing-appender = "0.2.3"
+tracing-appender.workspace = true
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tracing.workspace = true
 url.workspace = true
