--- a/.github/workflows/publish-nym-vpn-x.yml
+++ b/.github/workflows/publish-nym-vpn-x.yml
@@ -43,7 +43,7 @@ jobs:
       GH_REPO: ${{ github.repository }}
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       PKG_VERSION: ${{ needs.build-nym-vpn-x-linux.outputs.PKG_VERSION }}
-      UPLOAD_DIR_LINUX: ${{ needs.build-nym-vpn-x-linux.outputs.UPLOAD_DIR_LINUX }}
+      UPLOAD_DIR_UBUNTU_22: ${{ needs.build-nym-vpn-x-linux.outputs.UPLOAD_DIR_LINUX }}
       UPLOAD_DIR_WINDOWS: ${{ needs.build-nym-vpn-x-windows.outputs.UPLOAD_DIR_WINDOWS }}
     permissions: write-all
     steps:
@@ -108,10 +108,10 @@ jobs:
 
       - name: Generate checksums
         run: |
-          for f in ${{ env.UPLOAD_DIR_LINUX}}/*; do sha256sum ${f} > ${f}.sha256sum; done
+          for f in ${{ env.UPLOAD_DIR_UBUNTU_22}}/*; do sha256sum ${f} > ${f}.sha256sum; done
           for f in ${{ env.UPLOAD_DIR_WINDOWS}}/*; do sha256sum ${f} > ${f}.sha256sum; done
           echo 'SHA256_CHECKSUMS<<EOF' >> $GITHUB_ENV
-          cat ${{ env.UPLOAD_DIR_LINUX}}/*.sha256sum >> $GITHUB_ENV
+          cat ${{ env.UPLOAD_DIR_UBUNTU_22}}/*.sha256sum >> $GITHUB_ENV
           cat ${{ env.UPLOAD_DIR_WINDOWS}}/*.sha256sum >> $GITHUB_ENV
           echo 'EOF' >> $GITHUB_ENV
 
@@ -147,7 +147,7 @@ jobs:
             --notes-file "$RUNNER_TEMP/release-notes.md" \
             --title "$SUBJECT" \
             --target $GITHUB_SHA \
-            ${{ env.UPLOAD_DIR_LINUX}}/* \
+            ${{ env.UPLOAD_DIR_UBUNTU_22}}/* \
             ${{ env.UPLOAD_DIR_MAC}}/* \
             installer/*
 
