--- a/.github/workflows/build-nym-vpn-x-linux.yml
+++ b/.github/workflows/build-nym-vpn-x-linux.yml
@@ -92,7 +92,11 @@ jobs:
           APP_SENTRY_DSN: ${{ secrets.DESKTOP_JS_SENTRY_DSN }}
           # RUSTFLAGS: "-L ${{ env.WG_GO_LIB_PATH }}"
         run: |
-          npm run tauri build --${{ env.CARGO_TARGET }}
+          if [ "${{ env.CARGO_TARGET }}" = "release" ]; then
+            npm run tauri build
+          else
+            npm run tauri build -- --debug
+          fi
           ls -la target/release/ || true
           ls -la target/release/bundle || true
           ls -la target/release/bundle/* || true
