--- a/.github/workflows/build-nym-vpn-x-windows.yml
+++ b/.github/workflows/build-nym-vpn-x-windows.yml
@@ -199,8 +199,11 @@ jobs:
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_SIGNING_PFX_BASE64 }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_SIGNING_PFX_PASSWORD }}
         run: |
-          # sed -i 's/"bundle": {/"bundle": {"resources": ["wintun.dll", "vcruntime140.dll", "libwg.dll", "winfw.dll"],/g' '${{ env.TAURI_SRC }}/tauri.conf.json'
-          npm run tauri build --${{ env.CARGO_TARGET }}
+          if [ "${{ env.CARGO_TARGET }}" = "release" ]; then
+            npm run tauri build
+          else
+            npm run tauri build -- --debug
+          fi
           ls -la target/release/ || true
           ls -la target/release/bundle || true
           ls -la target/release/bundle/* || true
