--- a/.github/workflows/publish-nym-vpn-x.yml
+++ b/.github/workflows/publish-nym-vpn-x.yml
@@ -6,11 +6,11 @@ on:
         description: "Tag name for release"
         required: false
         default: nym-vpn-x-nightly
-      publish:
-        type: boolean
-        description: Publish Release
-        required: true
-        default: false
+      # publish:
+      #   type: boolean
+      #   description: Publish Release
+      #   required: true
+      #   default: false
   # push:
   #   tags:
   #     - nym-vpn-x-v[0-9]+.[0-9]+.[0-9]+*
