--- a/.github/workflows/publish-nym-vpn-x.yml
+++ b/.github/workflows/publish-nym-vpn-x.yml
@@ -6,11 +6,6 @@ on:
         description: "Tag name for release"
         required: false
         default: nym-vpn-x-nightly
-      # publish:
-      #   type: boolean
-      #   description: Publish Release
-      #   required: true
-      #   default: false
   # push:
   #   tags:
   #     - nym-vpn-x-v[0-9]+.[0-9]+.[0-9]+*
@@ -147,9 +142,8 @@ jobs:
             --notes-file "$RUNNER_TEMP/release-notes.md" \
             --title "$SUBJECT" \
             --target $GITHUB_SHA \
-            ${{ env.UPLOAD_DIR_UBUNTU_22}}/* \
-            ${{ env.UPLOAD_DIR_MAC}}/* \
-            installer/*
+            ${{ env.UPLOAD_DIR_UBUNTU_22}} \
+            ${{ env.UPLOAD_DIR_MAC}}/*
 
   gen-hashes:
     uses: ./.github/workflows/gen-hashes-json.yml
