--- a/.github/workflows/publish-nym-vpn-x.yml
+++ b/.github/workflows/publish-nym-vpn-x.yml
@@ -145,7 +145,7 @@ jobs:
             --title "$SUBJECT" \
             --target $GITHUB_SHA \
             ${{ env.UPLOAD_DIR_UBUNTU_22}} \
-            ${{ env.UPLOAD_DIR_WIN}}/*
+            ${{ env.UPLOAD_DIR_WINDOWS}}/*
 
   gen-hashes:
     uses: ./.github/workflows/gen-hashes-json.yml
