Convert compiler flags to uppercase

--- a/nym-vpn-core/Makefile
+++ b/nym-vpn-core/Makefile
@@ -45,8 +45,9 @@ build-deb-vpnc:
 	RUSTFLAGS="-L $(WG_TARGET_DIR)" cargo deb -p nym-vpnc
 
 build-vpn-lib-swift:	
-	$(eval RUSTFLAGS += $(foreach arch,$(IPHONEOS_ARCHS),RUSTFLAGS_$(arch)="-L $(WG_BUILD_DIR)/$(arch)"))
-	cd nym-vpn-lib && env $(RUSTFLAGS) cargo swift package --platforms ios --name NymVpnLib --release
+	$(eval RUSTFLAGS += $(foreach arch,$(IPHONEOS_ARCHS),CARGO_TARGET_$(shell echo '$(arch)' | tr '[:lower:]' '[:upper:]' | tr '-' '_')_RUSTFLAGS="-L $(WG_BUILD_DIR)/$(arch)"))
+	cd nym-vpn-lib; \
+	$(RUSTFLAGS) cargo swift package --platforms ios --name NymVpnLib --release
 
 generate-uniffi-swift:
 	cd nym-vpn-lib; \
