--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -12,6 +12,12 @@ members = [
     "crates/nym-vpn-store",
     "crates/nym-vpnc",
     "crates/nym-vpnd",
+    "crates/credential-storage",
+    "crates/credentials",
+    "crates/credentials-interface",
+    "crates/bandwidth-controller",
+    "crates/nymcoconut",
+    "crates/nym-id",
     "nym-vpn-cli",
     "nym-vpn-lib",
 ]
@@ -105,16 +111,20 @@ zeroize = "1.6.0"
 # Use the develop-pre-ecash-for-vpn branch until we have ported the vpn client to use ecash
 
 nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+# nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+nym-bandwidth-controller = { path = "crates/bandwidth-controller" }
 nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-client-core = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-config = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-credentials = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+# nym-credential-storage = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+nym-credential-storage = { path = "crates/credential-storage" }
+# nym-credentials = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+nym-credentials = { path = "crates/credentials" }
+nym-credential-interface = { path = "crates/credentials-interface" }
 nym-crypto = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-explorer-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-http-api-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
-nym-id = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+# nym-id = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-node-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-pemstore = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
@@ -123,3 +133,5 @@ nym-task = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-topology = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
 nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
+
+nym-api-requests = { git = "https://github.com/nymtech/nym", rev = "3f922cc0" }
