--- a/nym-vpn-core/crates/credentials/Cargo.toml
+++ b/nym-vpn-core/crates/credentials/Cargo.toml
@@ -20,7 +20,7 @@ zeroize = { workspace = true }
 # I guess temporarily until we get serde support in coconut up and running
 nym-credentials-interface = { path = "../credentials-interface" }
 nym-crypto = { workspace = true, features = ["rand", "asymmetric", "serde"] }
-nym-api-requests = { workspace = true }
+# nym-api-requests = { workspace = true }
 nym-validator-client = { workspace = true }
 
 [dev-dependencies]
