--- a/nym-vpn-core/crates/credentials/Cargo.toml
+++ b/nym-vpn-core/crates/credentials/Cargo.toml
@@ -7,10 +7,8 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# bls12_381 = { workspace = true, default-features = false, features = ["pairings", "alloc", "experimental"] }
 bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc"] }
 bincode = { workspace = true }
-# cosmrs = { workspace = true }
 thiserror = { workspace = true }
 log = { workspace = true }
 time = { workspace = true, features = ["serde"] }
@@ -20,9 +18,8 @@ zeroize = { workspace = true }
 # I guess temporarily until we get serde support in coconut up and running
 nym-credentials-interface = { path = "../credentials-interface" }
 nym-crypto = { workspace = true, features = ["rand", "asymmetric", "serde"] }
-# nym-api-requests = { workspace = true }
 nym-validator-client = { workspace = true }
 
-[dev-dependencies]
-rand = "0.8.5"
+# [dev-dependencies]
+# rand = "0.8.5"
 
