--- a/nym-vpn-core/crates/credentials-interface/Cargo.toml
+++ b/nym-vpn-core/crates/credentials-interface/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 
 [dependencies]
 # bls12_381 = { workspace = true, default-features = false }
-bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc"] }
+# bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc"] }
 serde = { workspace = true, features = ["derive"] }
 thiserror = { workspace = true }
 
