--- a/.github/workflows/publish-nym-vpn-x.yml
+++ b/.github/workflows/publish-nym-vpn-x.yml
@@ -1,16 +1,13 @@
 name: publish-nym-vpn-x
 on:
+  # schedule:
+  #   - cron: "4 4 * * *"
   workflow_dispatch:
     inputs:
       tag_name:
         description: "Tag name for release"
         required: false
         default: nym-vpn-x-nightly
-      publish:
-        type: boolean
-        description: Publish Release
-        required: true
-        default: false
   # push:
   #   tags:
   #     - nym-vpn-x-v[0-9]+.[0-9]+.[0-9]+*
@@ -148,8 +145,7 @@ jobs:
             --title "$SUBJECT" \
             --target $GITHUB_SHA \
             ${{ env.UPLOAD_DIR_UBUNTU_22}}/* \
-            ${{ env.UPLOAD_DIR_MAC}}/* \
-            installer/*
+            ${{ env.UPLOAD_DIR_WINDOWS}}/*
 
   gen-hashes:
     uses: ./.github/workflows/gen-hashes-json.yml
