--- a/nym-vpn-core/crates/credentials/Cargo.toml
+++ b/nym-vpn-core/crates/credentials/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc"] }
+bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc", "experimental", "zeroize"] }
 bincode = { workspace = true }
 thiserror = { workspace = true }
 log = { workspace = true }
