--- a/nym-vpn-core/crates/nymcoconut/Cargo.toml
+++ b/nym-vpn-core/crates/nymcoconut/Cargo.toml
@@ -9,7 +9,7 @@ license.workspace = true
 
 [dependencies]
 # bls12_381 = { workspace = true, default-features = false, features = ["pairings", "alloc", "experimental"] }
-bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc"] }
+bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc", "experimental", "zeroize"] }
 itertools = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true }
