--- a/nym-vpn-core/crates/nym-coconut-fork/Cargo.toml
+++ b/nym-vpn-core/crates/nym-coconut-fork/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nym-coconut"
+name = "nym-coconut-fork"
 version = "0.5.0"
 authors = ["Jedrzej Stuczynski <andrew@nymtech.net>", "Ania Piotrowska <ania@nymtech.net>"]
 edition = "2021"
@@ -8,7 +8,6 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# bls12_381 = { workspace = true, default-features = false, features = ["pairings", "alloc", "experimental"] }
 bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc", "experimental", "zeroize"] }
 itertools = { workspace = true }
 thiserror = { workspace = true }
