--- a/nym-vpn-core/crates/nym-ip-packet-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-ip-packet-client/Cargo.toml
@@ -9,11 +9,13 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+bytes.workspace = true
+futures.workspace = true
 nym-gateway-directory = { path = "../nym-gateway-directory" }
 nym-ip-packet-requests.workspace = true
 nym-sdk.workspace = true
-tracing.workspace = true
 thiserror.workspace = true
+tokio-util.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
-futures.workspace = true
+tracing.workspace = true
