--- a/.github/workflows/ci-nym-vpn-core.yml
+++ b/.github/workflows/ci-nym-vpn-core.yml
@@ -17,10 +17,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04-arc, custom-runner-mac-m1, custom-windows-11]
+        os: [arc-ubuntu-22.04, custom-runner-mac-m1, custom-windows-11]
         target: [native]
         include:
-          - os: ubuntu-22.04-arc
+          - os: arc-ubuntu-22.04
             target: android
     runs-on: ${{ matrix.os }}
 
