--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -55,6 +55,7 @@ axum = { version = "0.7.5" }
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 base64-url = "3.0.0"
 bincode = "1.3.3"
+bip39 = "2.0"
 bs58 = "0.5.1"
 bytes = "1.7"
 chrono = "0.4.38"
@@ -81,6 +82,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 signature = "2.2.0"
 tap = "1.0.1"
+tempfile = "3.12"
 thiserror = "1.0.63"
 time = "0.3.36"
 tokio = { version = "1.39" }
