--- a/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/nym-vpn-client/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:hardwareAccelerated="true"
         android:largeHeap="true">
         <service
-            android:name="net.nymtech.vpn.NymVpnService"
+            android:name="net.nymtech.vpn.NymBackend$VpnService"
             android:exported="true"
             android:foregroundServiceType="systemExempted"
             android:permission="android.permission.BIND_VPN_SERVICE"
