--- a/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
+++ b/nym-vpn-core/crates/nym-gateway-probe/Cargo.toml
@@ -24,17 +24,33 @@ rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
-tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
+tokio = { workspace = true, features = [
+    "process",
+    "rt-multi-thread",
+    "fs",
+    "sync",
+    "macros",
+] }
 tokio-util.workspace = true
 tracing-subscriber.workspace = true
 tracing.workspace = true
+x25519-dalek = { version = "2", features = [
+    "reusable_secrets",
+    "static_secrets",
+] }
 
+nym-authenticator-requests.workspace = true
 nym-bin-common.workspace = true
 nym-client-core.workspace = true
+nym-crypto.workspace = true
 nym-config.workspace = true
 nym-connection-monitor = { path = "../nym-connection-monitor" }
 nym-gateway-directory = { path = "../nym-gateway-directory" }
 nym-ip-packet-client = { path = "../nym-ip-packet-client" }
+nym-authenticator-client = { path = "../nym-authenticator-client" }
+nym-wireguard-types.workspace = true
 nym-ip-packet-requests.workspace = true
 nym-sdk.workspace = true
 nym-task.workspace = true
+boringtun = { git = "https://github.com/cloudflare/boringtun.git" }
+base64 = "0.22"
