--- a/nym-vpn-core/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/nym-vpn-lib/Cargo.toml
@@ -32,6 +32,7 @@ rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 signature.workspace = true
+sqlx.workspace = true
 tap.workspace = true
 thiserror.workspace = true
 time.workspace = true
