--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -80,6 +80,7 @@ serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
 signature = "2.2.0"
+sqlx = "0.6.3"
 tap = "1.0.1"
 thiserror = "1.0.63"
 time = "0.3.36"
