Use lighter linker for windows build

--- a/nym-vpn-core/nym-vpn-lib/.cargo/config.toml
+++ b/nym-vpn-core/nym-vpn-lib/.cargo/config.toml
@@ -6,3 +6,5 @@ rustflags = ["-L", "./android/app/build/extraJni/x86_64"]
 rustflags = ["-L", "./android/app/build/extraJni/armeabi-v7a"]
 [target.i686-linux-android]
 rustflags = ["-L", "./android/app/build/extraJni/x86"]
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=-fuse-ld=lld"]
