--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -102,8 +102,6 @@ url = "2.5"
 vergen = { version = "8.3.1", default-features = false }
 zeroize = "1.6.0"
 
-# Use the develop-pre-ecash-for-vpn branch until we have ported the vpn client to use ecash
-
 nym-authenticator-requests = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-client-core = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
@@ -119,6 +117,8 @@ nym-task = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-topology = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-validator-client = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
 nym-wireguard-types = { git = "https://github.com/nymtech/nym", rev = "dff82f9" }
+
+# Pointing to before ecash was merged, for backwards compatibility and migration period
 
 nym-credential-storage-fork = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-credential-storage" }
 nym-credentials-fork = { git = "https://github.com/nymtech/nym", rev = "3f922cc0", package = "nym-credentials" }
